Regression: Curves: Extra point in evaluated spline of Curves geometry #119247

Closed
opened 2024-03-09 13:03:36 +01:00 by Iliya Katushenock · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-08 00:32, hash: 6dffc162c7b9
Worked: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-27 00:02, hash: cfb60c98be7d

Short description of error
There is one extra point in end of the curve which is randomly located in the world.
image

Exact steps for others to reproduce the error

  1. Take default cube.
  2. Add Geometry Nodes modifier on the cube and go to the nodes editro.
  3. Add Bézier Segment node and put them to the output.
  4. Change resolution of curve to 2.
  5. Convert this cube to the Curves (Object -> Convert -> Curves).
  6. Go to Edit mode for this curve, take just one vertex and drag them.
    As you can see, there is some extra element which is randomly jumping in the curve.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-08 00:32, hash: `6dffc162c7b9` Worked: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-27 00:02, hash: `cfb60c98be7d` **Short description of error** There is one extra point in end of the curve which is randomly located in the world. ![image](/attachments/6d08630e-c2cc-42cd-b5fb-8bcb85fda26c) **Exact steps for others to reproduce the error** 1. Take default cube. 2. Add Geometry Nodes modifier on the cube and go to the nodes editro. 3. Add `Bézier Segment` node and put them to the output. 4. Change resolution of curve to 2. 5. Convert this cube to the `Curves` (`Object` -> `Convert` -> `Curves`). 6. Go to Edit mode for this curve, take just one vertex and drag them. As you can see, there is some extra element which is randomly jumping in the curve.
Member

Caused by bf17fc8d79.

Caused by bf17fc8d797539d2a614d7019996f37b3d0bc3ae.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-12 15:03:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119247
No description provided.