Fix #119247: Regression: Curves: Extra point in evaluated spline of Curves geometry